--- a/.github/workflows/checkstatus.yml
+++ b/.github/workflows/checkstatus.yml
@@ -9,6 +9,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
+    - run: echo "${{ toJson(github) }}"
+
+    - run: echo "${{ toJson(github.event) }}"
+
     - name: Check status
       id: check
       run: >-
