--- a/.github/workflows/checkstatus.yml
+++ b/.github/workflows/checkstatus.yml
@@ -1,7 +1,8 @@
 name: Check all tests
 
 on:
-  status:
+  check_suite:
+    types: [completed]
 
 jobs:
 
@@ -12,11 +13,11 @@ jobs:
 
     - uses: actions/checkout@v2
 
+    - name: Save github.event to event.json
+      run: echo '${{ toJson(github.event) }}' > event.json
+
     - uses: ./.github/check-status
       id: check
-      with:
-        token: ${{ github.token }}
-        sha: ${{ github.event.sha }}
 
     - name: Upload artifact URL file
       if: steps.check.outputs.skip != 'true'
