--- a/conda_lock.yml
+++ b/conda_lock.yml
@@ -16,16 +16,18 @@ dependencies:
   - cloog=0.18.0=0
   - cmake=3.22.1=h1fce559_0
   - cython=0.29.25=py37hdbfa776_0
+  - dbus=1.13.18=hb2f20db_0
   - expat=2.4.1=h2531618_2
-  - flake8=3.9.2=pyhd3eb1b0_0
+  - flake8=4.0.1=pyhd3eb1b0_0
   - flex=2.6.4=ha10e3a4_1
+  - freetype=2.11.0=h70c0345_0
   - gcc-riscv64-elf-newlib=9.2.0=20201119_154229
   - gcc-riscv64-elf-nostdc=9.2.0=20210923_213204
+  - glib=2.69.1=h4ff587b_1
   - gmp=6.2.1=h2531618_2
-  - gperftools=2.9.1_6_ge80652b=20220114_081711
+  - gperftools=2.9.1_6_ge80652b=20220202_022309
   - icestorm=0.0_0719_g792cef0=20201120_145821
   - icu=58.2=he6710b0_3
-  - importlib-metadata=4.8.2=py37h06a4308_0
   - isl=0.21=20210924_145025
   - iverilog=s20150603_0957_gad862020=20201120_145821
   - krb5=1.19.2=hac12032_0
@@ -39,12 +41,14 @@ dependencies:
   - libgomp=9.3.0=h5101ec6_17
   - libiconv=1.15=h63c8f33_5
   - libnghttp2=1.46.0=hce63b2e_0
+  - libpng=1.6.37=hbc83047_0
   - libssh2=1.9.0=h1ba5d50_1
   - libstdcxx-ng=9.3.0=hd4cf53a_17
   - libunwind=1.5.0=h295c915_1
   - libusb=1.0.20=20220104_201921
   - libuuid=1.0.3=h7f8727e_2
   - libuv=1.40.0=h7b6447c_0
+  - libxcb=1.14=h7b6447c_0
   - libxml2=2.9.12=h03d6c58_0
   - lz4-c=1.9.3=h295c915_1
   - m4=1.4.18=h4e445db_0
@@ -54,7 +58,7 @@ dependencies:
   - mpfr=4.0.2=hb69a4c5_1
   - ncurses=6.3=h7f8727e_2
   - nodejs=10.13.0=he6710b0_0
-  - openjdk=8.0.152=h7b6447c_3
+  - openjdk=11.0.13=h87a67e3_0
   - openocd=0.10.0_1514_ga8edbd020=20201119_154304
   - openssl=1.1.1m=h7f8727e_0
   - packaging=21.3=pyhd3eb1b0_0
@@ -62,8 +66,8 @@ dependencies:
   - perl=5.26.2=h14c3975_0
   - pip=21.2.2=py37h06a4308_0
   - pkg-config=0.29.2=h1bed415_8
-  - prjxray-db=0.0_257_g0a0adde=20220114_081711
-  - prjxray-tools=0.1_2942_g5349556b=20220114_081711
+  - prjxray-db=0.0_257_g0a0adde=20220202_022309
+  - prjxray-tools=0.1_2942_g5349556b=20220202_022309
   - pycodestyle=2.7.0=pyhd3eb1b0_0
   - pyflakes=2.3.1=pyhd3eb1b0_0
   - pyparsing=3.0.4=pyhd3eb1b0_0
@@ -71,19 +75,17 @@ dependencies:
   - readline=8.1.2=h7f8727e_1
   - rhash=1.4.1=h3c74f83_1
   - setuptools=58.0.4=py37h06a4308_0
-  - sqlite=3.37.0=hc218d9a_0
-  - surelog=0.0_4154_ga3df4fddd=20220202_022309_py37
+  - sqlite=3.37.2=hc218d9a_0
+  - surelog=0.0_4165_g83e5bb9a2=20220202_022309_py37
   - swig=4.0.2=h295c915_4
-  - symbiflow-yosys-plugins=1.0.0_7_634_gd7ec931=20220202_022309
+  - symbiflow-yosys-plugins=1.0.0_7_640_gf184835=20220202_022309
   - tbb=2020.3=hfd86e86_0
   - tk=8.6.11=h1ccaba5_0
-  - typing_extensions=3.10.0.2=pyh06a4308_0
-  - vtr-optimized=8.0.0_5105_g116f30cb8=20220114_081711
+  - vtr-optimized=8.0.0_5170_g81b5aa2a8=20220202_022309
   - wheel=0.37.1=pyhd3eb1b0_0
   - xz=5.2.5=h7b6447c_0
-  - yosys=0.13_4_g61324cf55=20220114_081711_py37
+  - yosys=0.13_39_g958c3a46a=20220202_022309_py37
   - zachjs-sv2v=0.0.5_0025_ge9f9696=20201120_205532
-  - zipp=3.7.0=pyhd3eb1b0_0
   - zlib=1.2.11=h7f8727e_4
   - zstd=1.5.0=ha4553b6_1
   - pip:
@@ -94,21 +96,22 @@ dependencies:
     - certifi==2021.10.8
     - cffi==1.15.0
     - chardet==4.0.0
-    - charset-normalizer==2.0.10
+    - charset-normalizer==2.0.11
     - colorama==0.4.4
     - cryptography==36.0.1
     - cssselect2==0.4.1
     - cycler==0.11.0
     - defusedxml==0.7.1
     - edalize @ git+https://github.com/lowRISC/edalize.git@23e1beab41508e13c565125e5edcadb86b0032f6
-    - fasm==0.0.2.post80
+    - fasm==0.0.2.post88
     - fasm-utils @ git+https://github.com/QuickLogic-Corp/quicklogic-fasm-utils@3d6a375ddb6b55aaa5a59d99e44a207d4c18709f
-    - fonttools==4.28.5
+    - fonttools==4.29.1
     - fusesoc @ git+https://github.com/lowRISC/fusesoc.git@14dfc825ced58fe1fb343662fa80fc4fbd0fdc50
     - gitdb==4.0.9
     - GitPython==3.1.26
     - hilbertcurve==1.0.5
     - idna==3.3
+    - importlib-metadata==4.10.1
     - importlib-resources==5.4.0
     - iniconfig==1.1.1
     - intelhex==2.3.0
@@ -126,7 +129,7 @@ dependencies:
     - okonomiyaki==1.3.2
     - parameterized==0.8.1
     - pdfminer.six==20211012
-    - Pillow==9.0.0
+    - Pillow==9.0.1
     - pluggy==1.0.0
     - ply==3.11
     - progressbar2==4.0.0
@@ -134,10 +137,10 @@ dependencies:
     - pycapnp==1.0.0b1
     - pycparser==2.21
     - pyjson==1.3.0
-    - pyjson5==1.6.0
+    - pyjson5==1.6.1
     - pyrsistent==0.18.1
     - pyserial==3.5
-    - pytest==6.2.5
+    - pytest==7.0.0
     - python-constraint==1.4.0
     - python-dateutil==2.8.2
     - python-fpga-interchange @ git+https://github.com/SymbiFlow/python-fpga-interchange.git@b13ee55ebce358a488fe9087f3b4f1bf087a0f24
@@ -160,12 +163,14 @@ dependencies:
     - tinycss2==1.1.1
     - tinyfpgab==1.1.0
     - tinyprog==1.0.21
-    - toml==0.10.2
+    - tomli==2.0.1
     - tqdm==4.62.3
+    - typing_extensions==4.0.1
     - urllib3==1.26.8
     - webencodings==0.5.1
     - yapf==0.26.0
     - zipfile2==0.0.12
+    - zipp==3.7.0
     - -e third_party/prjxray
     - -e third_party/xc-fasm
     - -e third_party/qlf-fasm
