--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,8 +6,7 @@ jobs:
 
   Test:
     if: ${{ !(github.event_name != 'pull_request' && github.actor == 'dependabot[bot]') }}
-    container: ubuntu:bionic
-    runs-on: [self-hosted, Linux, X64]
+    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
@@ -22,15 +21,15 @@ jobs:
         with:
           submodules: recursive
 
-      - name: Execute test script
-        run: stdbuf -i0 -o0 -e0 ./.github/ci/${{ matrix.test }}.sh
-
-      - uses: actions/upload-artifact@v2
-        if: ${{ always() }}
-        with:
-          path: |
-            **/results*.gz
-            **/plot_*.svg
+#      - name: Execute test script
+#        run: stdbuf -i0 -o0 -e0 ./.github/ci/${{ matrix.test }}.sh
+#
+#      - uses: actions/upload-artifact@v2
+#        if: ${{ always() }}
+#        with:
+#          path: |
+#            **/results*.gz
+#            **/plot_*.svg
 
   Automerge:
     needs: Test
